@@ -1,0 +1,1 @@
+usr/lib/cdebconf/frontend/text
