@@ -1,0 +1,14 @@
+Template: debconf/entropy/text/action
+Type: text
+# :sl3:
+_Description: Enter random characters
+
+Template: debconf/entropy/text/help
+Type: text
+# :sl3:
+_Description: You can help speed up the process by entering random characters on the keyboard, or just wait until enough key data has been collected (which can take a long time).
+
+Template: debconf/entropy/success
+Type: text
+# :sl3:
+_Description: Key data has been created successfully.
