@@ -7,6 +7,17 @@ Build-Depends: debhelper (>= 4.2), libnewt-dev, libtextwrap-dev, libdebconfclien
 Standards-Version: 3.7.2
 Vcs-Svn: svn://svn.debian.org/d-i/trunk/packages/cdebconf-entropy
 
+Package: cdebconf-text-entropy
+Architecture: any
+Section: debian-installer
+Depends: cdebconf-text-udeb, ${shlibs:Depends}
+Provides: cdebconf-entropy
+XC-Package-Type: udeb
+Description: cdebconf text plugin for reading from /dev/random
+ cdebconf plugin to facilitate reading random data from /dev/random.
+ Asks the user to enter random characters on the keyboard and shows a
+ progressbar with percent-of-data read.
+
 Package: cdebconf-newt-entropy
 Architecture: any
 Section: debian-installer
