@@ -16,6 +16,9 @@ cdebconf-entropy (0.7) UNRELEASED; urgency=low
   * Add an entropy plugin for the GTK+ frontend, shipped in
     cdebconf-gtk-entropy.  This adds a Build-Depends on
     libgtk-directfb-2.0-dev.
+  * Add an entropy plugin for the text frontend, shipped in
+    cdebconf-text-entropy.
+  (Closes: #381896)
 
  -- Jérémy Bobbio <lunar@debian.org>  Sun, 23 Mar 2008 20:28:57 +0100
 
